# Wildfire_Bench

./: .gitignore  README.md  config.yaml  mean_std_dict_1.json  pyproject.toml  requirements.txt  train_scripts.sh
configs/: GreeceFire.yaml  SeasFire.yaml  SeasFire_fine.yaml  WildfireSpreadTS.yaml  config.yaml  greekfire.yaml  resnet_WTS.yaml  seasfire.yaml  wildfirespreadTS.yaml
jobs_freeze/: GreeceFire_freeze-31763245.out  GreeceFire_freeze-31810401.out  GreeceFire_freeze.sh  GreeceFire_seed5-31754913.out  SeasFire_fine_freeze-31754926.out  SeasFire_fine_freeze-31763247.out  SeasFire_fine_freeze-31810409.out  SeasFire_fine_freeze.sh  SeasFire_freeze-31754939.out  SeasFire_freeze-31763250.out  SeasFire_freeze-31810418.out  SeasFire_freeze.sh  WildfireSpreadTS_freeze-31754952.out  WildfireSpreadTS_freeze-31763251.out  WildfireSpreadTS_freeze-31810431.out  WildfireSpreadTS_freeze.sh
jobs_freeze_losses/: GreeceFire_Dice_freeze-31755164.out  GreeceFire_Dice_freeze-31763217.out  GreeceFire_Dice_freeze-31810558.out  GreeceFire_Dice_freeze.sh  GreeceFire_Jaccard_freeze-31755167.out  GreeceFire_Jaccard_freeze-31763219.out  GreeceFire_Jaccard_freeze-31810560.out  GreeceFire_Jaccard_freeze.sh  GreeceFire_Lovasz_freeze-31755169.out  GreeceFire_Lovasz_freeze-31763220.out  GreeceFire_Lovasz_freeze-31810564.out  GreeceFire_Lovasz_freeze.sh  SeasFire_Dice_freeze-31755171.out  SeasFire_Dice_freeze-31763222.out  SeasFire_Dice_freeze-31810583.out  SeasFire_Dice_freeze.sh  SeasFire_Jaccard_freeze-31755180.out  SeasFire_Jaccard_freeze-31763230.out  SeasFire_Jaccard_freeze-31810598.out  (+29 more)
(+126 files in other folders)
