[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Wildfire_Bench"
version = "0.1"
authors =[
    {name="Aamer Abdul", email="ar.aamer@gmail.com"},
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [

]

[project.urls]
"Bug Tracker" = "https://github.com/microsoft/ClimaX/issues"

[tool.setuptools.packages.find]
where = ["src"]
